# cmake_boost_ctest_msvc_example

./: CMakeLists.txt  README.md  boost_install.bat  create_msvc_project.bat  lib.cpp  lib.h  test.cpp
